# docs/swagger.json
@@ -15,44 +15,7 @@
     },
     "host": "124.71.184.107",
     "paths": {
-        "/": {
-            "post": {
-                "description": "学号密码登录",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "登录",
-                "parameters": [
-                    {
-                        "description": "登录的用户信息",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "将student_id作为token保留",
-                        "schema": {
-                            "$ref": "#/definitions/handler.Token"
-                        }
-                    },
-                    "400": {
-                        "description": "输入有误，格式错误"
-                    },
-                    "401": {
-                        "description": "用户名或密码错误"
-                    }
-                }
-            }
-        },
-        "/crawler": {
+        "/homework": {
             "post": {
                 "description": "爬取用户云课堂作业",
                 "consumes": [
@@ -91,10 +54,101 @@
                         }
                     },
                     "400": {
-                        "description": "输入有误，格式错误"
+                        "description": "Lack Necessary_Param."
                     },
                     "401": {
-                        "description": "找不到该用户信息，请先登录"
+                        "description": "Token Invalid."
+                    },
+                    "500": {
+                        "description": "Fail."
+                    }
+                }
+            }
+        },
+        "/user": {
+            "put": {
+                "description": "接收新的User结构体来修改用户信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "修改用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "需要修改的用户信息",
+                        "name": "User",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "修改成功"
+                    },
+                    "400": {
+                        "description": "Lack Necessary_Param.\" or \"Sex参数错误(0 = 未设置， 1 = 男， 2 = 女)"
+                    },
+                    "401": {
+                        "description": "Token Invalid."
+                    },
+                    "500": {
+                        "description": "Fail."
+                    }
+                }
+            },
+            "post": {
+                "description": "学号密码登录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "description": "登录的用户信息",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "将student_id作为token保留",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Lack Necessary_Param."
+                    },
+                    "401": {
+                        "description": "用户名或密码错误"
+                    },
+                    "500": {
+                        "description": "Fail."
                     }
                 }
             }
@@ -112,10 +166,22 @@
         "model.User": {
             "type": "object",
             "properties": {
-                "id": {
+                "name": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "sex": {
+                    "type": "integer"
+                },
+                "student_id": {
+                    "type": "string"
+                },
+                "summary": {
+                    "type": "string"
+                },
+                "user_picture": {
                     "type": "string"
                 }
             }
